--- a/_posts/2017-03-02-Genomic-Sampling.html
+++ b/_posts/2017-03-02-Genomic-Sampling.html
@@ -16,6 +16,9 @@ background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/be/Sharin
 ---
 &lt;!-- class: center, middle --&gt;
 
+# Genomic Sampling
+
+---
 # 1. INTRODUCTION
 
 ## 1.1. Objectives of the Guideline
@@ -23,15 +26,8 @@ background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/be/Sharin
 - provide harmonised principles of genomic sampling and management of genomic data in clinical studies
 - facilitate the implementation of genomic studies by enabling a common understanding of critical
 parameters for the unbiased collection, storage and optimal use of genomic samples and data
-
----
-
-Further objectives of this guideline are to increase awareness and provide considerations
+- increase awareness and provide considerations
 regarding subject privacy, data protection, informed consent and transparency of findings.
-This guideline is intended to foster interactions amongst stakeholders, including drug
-developers, investigators and regulators, and to encourage genomic research within clinical
-studies.
----
 
 ## 1.2. Background
 - growing awareness of, and interest in, **genomic data**
@@ -308,13 +304,13 @@ Whereas genomic samples may be destroyed upon participant request, destruction o
 contradicts the principles of scientific integrity, particularly in the context of clinical studies.
 
 # 4. PRIVACY AND CONFIDENTIALITY
-Processing and handling of genomic samples and data should be conducted in a manner that
-protects the confidentiality of subjects’ individual data. For genomic data, like other clinical
-data, coding techniques as well as security and access procedures help maintain
-confidentiality. Appropriate security measures using coding schemata and restriction of
-access should be implemented at each step of analysis and storage. Suitable consideration
-should also be given to data protection and confidentiality legislation and policies in each
-jurisdiction.
+
+- Processing and handling of genomic samples and data
+    - **protects the confidentiality of subjects’ individual data**
+- *coding techniques* as well as security and access procedures 
+- Appropriate security measures using coding schemata and restriction of
+access 
+    - implemented at each step of analysis and storage. 
 
 ## 4.1. Coding of Samples and Data
 Genomic data should be treated with the same high standards of confidentiality as other
